# pynbody-extras

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  asv.conf.json  pyproject.toml  setup.py
benchmarks/: bench_gravity.py
crates/: Cargo.toml
crates/gravity/: Cargo.toml
crates/gravity/src/: direct.rs  kernel.rs  lib.rs  multipole.rs  tree.rs
crates/gravity/tests/: gravity_tests.rs  single_node.rs  translate_multipole.rs
crates/pynbodyext-rust/: Cargo.toml
crates/pynbodyext-rust/src/: gravity.rs  lib.rs
pynbodyext/: calculate.py  log.py
pynbodyext/chunk/: __init__.py  chunk.py  chunksnap.py  simdaskarray.py
pynbodyext/core/calculate/: __init__.py  base.py  cache.py  context.py  declarative.py  display.py  engine.py  enums.py  exceptions.py  expr.py  fields.py  filters.py  params.py  perf.py  pipeline.py  properties.py  result.py  runtime.py  scopes.py  template.py  trace.py  transforms.py
pynbodyext/filters/: __init__.py  base.py  filt.py
pynbodyext/gravity/: __init__.py  base.py  pyn_gravity.py
pynbodyext/plot/: image.py
pynbodyext/profiles/: __init__.py  base.py  bins.py  proarray.py  profile.py  spatial_profile.py
pynbodyext/properties/: __init__.py  base.py  generic.py
pynbodyext/transforms/: __init__.py  rotate.py  shift.py  wrap.py
pynbodyext/util/: _type.py  default.mplstyle  deps.py
src/pynbodyext/: __init__.py  calculate.py  log.py
src/pynbodyext/chunk/: __init__.py  chunk.py  chunksnap.py  simdaskarray.py  snapview.py
src/pynbodyext/filters/: __init__.py  base.py  filt.py  pynfilt.py
src/pynbodyext/profiles/: __init__.py  base.py  bins.py  proarray.py  profile.py  spatial_profile.py  time_profile.py
src/pynbodyext/properties/: __init__.py  base.py  generic.py
src/pynbodyext/transforms/: __init__.py  base.py  rotate.py  shift.py  wrap.py
src/pynbodyext/util/: _type.py  default.mplstyle  perf.py  tracecache.py
tests/: calculate_init_test.py  conftest.py  filter_test.py  profile_test.py  property_test.py  test_calculate_base.py  transform_test.py
