# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "pynbodyext"
description = "Extensions and utilities for pynbody"
authors = [
    { name = "Shuai LU (卢帅)", email = "lushuai@stu.xmu.edu.cn" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pynbody>=2.0",     # adjust as needed
    "matplotlib",
    'typing_extensions>=4.3; python_version < "3.11"'
    ]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/GalaxySimAnalytics/pynbody-extras"
Github = "https://github.com/GalaxySimAnalytics/pynbody-extras"


# ======================================================================================
# Build system configuration
# ======================================================================================
[build-system]
requires = [
    "setuptools>=61",
    "setuptools-rust>=1.9",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["pynbodyext"]

[tool.setuptools.dynamic]
version = {attr = "pynbodyext.__version__"}


# ======================================================================================
# Maturin configuration (Rust bindings)
# ======================================================================================
[tool.maturin]
manifest-path = "crates/pynbodyext-rust/Cargo.toml"
module-name = "pynbodyext._rust"
python-packages = ["pynbodyext"]


# ======================================================================================
# Optional dependencies
# ======================================================================================
[project.optional-dependencies]

chunk = ["dask"]

dev = [
    "pre-commit",
    "mypy>=1.17",
    "ruff>=0.11",
    "pytest>=7.4",
]



# ======================================================================================
# Ruff configuration
# ======================================================================================
[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
exclude = [
    "tests/",
    "docs/"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
skip-magic-trailing-comma = true


[tool.ruff.lint]
select = [
    "E","W",# pycodestyle
    "F",    # pyflakes
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "TC",   # flake8-type-checking
    "YTT",  # flake8-2020
    "Q",    # flake8-quotes
    "PIE",  # flake8-pie
    "TID",  # flake8-tidy-imports
    "ISC",  # flake8-implicit-str-concat

    # pylint
    "PLE","PLR","PLW",

    "UP",   # pyupgrade
    "I",    # isort
    "NPY",  # numpy specific rules
]
ignore = [
    # Magic number
    "PLR2004",
    # Too many arguments to function call
    "PLR0913",
    # Too many branches
    "PLR0912",
    # line too long
    "E501", 
    # Do not use variables named 'I', 'O', or 'l'
    "E741",
    # allow module import not at top of file, important for notebooks, cyclic imports
    "E402",
    # allow use (X,Y) in isinstance call
    # "UP038",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = [
  "numpy",
  "scipy",
  "matplotlib",
  "pytest",
]
known-first-party = ["pynbodyext"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# ======================================================================================
# mypy configuration
# ======================================================================================
[tool.mypy]
python_version = "3.11"

ignore_missing_imports = true

warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true

disallow_incomplete_defs = true
check_untyped_defs = true


# ======================================================================================
# pytest configuration
# ======================================================================================
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
console_output_style = "progress"

log_cli = false
