[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
rayon = "1.10"
pyo3 = { version = "0.19", features = ["extension-module", "auto-initialize"], optional = true }
numpy = { version = "0.19", optional = true }
ndarray = { version = "0.15", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "gravity_bench"
harness = false